<?xml version="1.0" encoding="utf-8"?>
<android.gesture.GestureOverlayView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/gestures"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
>

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@color/item_bg"
  android:id="@+id/main_ll"
>

<LinearLayout
	android:id="@+id/exit_ll"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:background="@color/exit_ll_bg"
	android:orientation="horizontal"
/>

	<LinearLayout
		android:id="@+id/message"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textColor="@color/query_txt"
		android:background="@color/query_bg"
	/>

	<LinearLayout
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:orientation="horizontal"
	>
		<LinearLayout
	  		android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:orientation="vertical"
	  		android:layout_weight="1"
	  		android:padding="0dp"
	  		android:gravity="center_horizontal"
		>
			<TextView
				  android:id="@+id/btn01_mark"
				  android:layout_width="fill_parent"
				  android:layout_height="4dp"
				  android:textSize="2dp"
				  android:padding="0dp"
				  android:background="@color/green"
				  android:visibility="invisible"
			/>
			<Button
			  android:id="@+id/Button01"
			  android:layout_width="fill_parent"
			  android:layout_height="wrap_content"
			  android:text="@string/dm_btn_get"
			  android:onClick="onGetButton"
			  />
		</LinearLayout>
		<LinearLayout
	  		android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:orientation="vertical"
	  		android:layout_weight="1"
	  		android:padding="0dp"
	  		android:gravity="center_horizontal"
		>
			<TextView
				  android:id="@+id/btn02_mark"
				  android:layout_width="fill_parent"
				  android:layout_height="4dp"
				  android:textSize="2dp"
				  android:padding="0dp"
				  android:background="@color/green"
				  android:visibility="invisible"
			/>
			<Button
			  android:id="@+id/Button02"
			  android:layout_width="fill_parent"
			  android:layout_height="wrap_content"
			  android:text="@string/dm_btn_set"
			  android:onClick="onSetButton"
			  />
		</LinearLayout>
		<LinearLayout
	  		android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:orientation="vertical"
	  		android:layout_weight="1"
	  		android:padding="0dp"
	  		android:gravity="center_horizontal"
		>
			<TextView
				  android:id="@+id/btn03_mark"
				  android:layout_width="fill_parent"
				  android:layout_height="4dp"
				  android:textSize="2dp"
				  android:padding="0dp"
				  android:background="@color/green"
				  android:visibility="invisible"
			/>
			<Button
			  android:id="@+id/Button03"
			  android:layout_width="fill_parent"
			  android:layout_height="wrap_content"
			  android:text="@string/dm_btn_new"
			  android:onClick="onNewButton"
			  />
		 </LinearLayout>
	</LinearLayout>

	<RelativeLayout android:layout_width="fill_parent"
		android:id="@+id/linearLayout1"
		android:layout_height="fill_parent"
		android:orientation="vertical"

		>

		<ListView
		  android:id="@+id/ListView01"
		  android:layout_height="fill_parent"
		  android:layout_width="fill_parent"
		/>

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:paddingTop="2dp"
			android:paddingRight="5dp"
			android:gravity="right"
		>
			<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:paddingTop="0dp"
			android:paddingRight="0dp"
			android:gravity="right"
		>
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"
				android:clickable="true"
				android:focusable="true"
				android:padding="0dp"
				android:background="@drawable/action_item_btn"
				android:onClick="onReloadButton"
			>
				<ImageView
					android:layout_width="44dp"
					android:layout_height="44dp"
					android:gravity="center_horizontal"
					android:background="@drawable/light_button_background"
					android:src="@drawable/icon_reload"
					android:padding="4dp"
				/>
			</LinearLayout>
		</LinearLayout>
		</LinearLayout>

	</RelativeLayout>

</LinearLayout>



</android.gesture.GestureOverlayView>